added client and server

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,18 @@
 	<h1 class="tweeterHeader">Tweeter</h1>
 
 	<div class="tweetContainer">
-		<input type="text" name="tweet" class="tweetInput" placeholder="Say something . . .">
+		<input type="text" name="tweet" class="tweetInput" id="newTweet" placeholder="Say something . . .">
 
-		<button type="button" class="tweetButton">Tweet</button>
+		<button type="button" class="tweetButton" id="tweetBtn">Tweet</button>
 	</div>
 
-	<div class="tweets">
+	<div class="tweets" id="tweetTarget">
 		
 	</div>
+
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+	<script type="text/javascript" src=script.js></script>
 
 </body>
 </html>
